Improve test/doc/api

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -2,9 +2,9 @@ ignore:
   - "Tests/"
 
 coverage:
-  precision: 5
-  round: down
-  range: "50...70"
+  precision: 2
+  range: 50...75
+  precision: 3
 
   status:
     project: yes
