--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,11 +1,10 @@
 included:
   - Sources
-  - Tests
 
 disabled_rules:
-  - identifier_name
-  - type_name
   - cyclomatic_complexity
   - file_length
+  - function_body_length
+  - identifier_name
 
 line_length: 200
