--- a/Schedule.xcodeproj/xcshareddata/xcschemes/Schedule-tvOS.xcscheme
+++ b/Schedule.xcodeproj/xcshareddata/xcschemes/Schedule-tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "9999"
+   LastUpgradeVersion = "1000"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Schedule::Schedule"
+               BlueprintIdentifier = "52D6D9EF1BEFFFBE002C0205"
                BuildableName = "Schedule.framework"
-               BlueprintName = "Schedule"
+               BlueprintName = "Schedule-tvOS"
                ReferencedContainer = "container:Schedule.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -30,16 +30,26 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Schedule::ScheduleTests"
-               BuildableName = "ScheduleTests.xctest"
-               BlueprintName = "ScheduleTests"
+               BlueprintIdentifier = "DD75028C1C690C7A006590AF"
+               BuildableName = "Schedule-tvOS Tests.xctest"
+               BlueprintName = "Schedule-tvOS Tests"
                ReferencedContainer = "container:Schedule.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "52D6D9EF1BEFFFBE002C0205"
+            BuildableName = "Schedule.framework"
+            BlueprintName = "Schedule-tvOS"
+            ReferencedContainer = "container:Schedule.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -56,9 +66,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Schedule::Schedule"
+            BlueprintIdentifier = "52D6D9EF1BEFFFBE002C0205"
             BuildableName = "Schedule.framework"
-            BlueprintName = "Schedule"
+            BlueprintName = "Schedule-tvOS"
             ReferencedContainer = "container:Schedule.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -71,6 +81,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "52D6D9EF1BEFFFBE002C0205"
+            BuildableName = "Schedule.framework"
+            BlueprintName = "Schedule-tvOS"
+            ReferencedContainer = "container:Schedule.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
