--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,24 @@ branches:
   only:
     - master
 
+language: objective-c
 osx_image: xcode10
-language: generic
 
 matrix:
   include:
     - os: osx
       env:
+        - SCHEME="Schedule-iOS"
         - SDK="iphonesimulator12.0"
         - DESTINATION="OS=12.0,name=iPhone X"
     - os: osx
       env:
+        - SCHEME="Schedule-macOS"
         - SDK="macosx10.13"
         - DESTINATION="arch=x86_64"
     - os: osx
       env:
-        - SDK="watchsimulator5.0"
-        - DESTINATION="OS=5.0,name=Apple Watch Series 4 - 44mm"
-    - os: osx
-      env:
+        - SCHEME="Schedule-tvOS"
         - SDK="appletvsimulator12.0"
         - DESTINATION="OS=12.0,name=Apple TV 4K"
     - os: linux
@@ -37,7 +36,7 @@ before_install:
 
 script:
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-      - xcodebuild clean build test -project Schedule.xcodeproj -scheme Schedule-Package -sdk "$SDK" -destination "$DESTINATION" -enableCodeCoverage YES | xcpretty;
+      - xcodebuild clean build test -project Schedule.xcodeproj -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" -enableCodeCoverage YES | xcpretty;
     fi
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
       swift build;
