--- a/Schedule.xcodeproj/xcshareddata/xcschemes/Schedule-Package.xcscheme
+++ b/Schedule.xcodeproj/xcshareddata/xcschemes/Schedule-Package.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1000"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "52D6D9EF1BEFFFBE002C0205"
+               BlueprintIdentifier = "Schedule::Schedule"
                BuildableName = "Schedule.framework"
-               BlueprintName = "Schedule-tvOS"
+               BlueprintName = "Schedule"
+               ReferencedContainer = "container:Schedule.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Schedule::ScheduleDemo"
+               BuildableName = "ScheduleDemo"
+               BlueprintName = "ScheduleDemo"
                ReferencedContainer = "container:Schedule.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,30 +40,19 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DD75028C1C690C7A006590AF"
-               BuildableName = "Schedule-tvOS Tests.xctest"
-               BlueprintName = "Schedule-tvOS Tests"
+               BlueprintIdentifier = "Schedule::ScheduleTests"
+               BuildableName = "ScheduleTests.xctest"
+               BlueprintName = "ScheduleTests"
                ReferencedContainer = "container:Schedule.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "52D6D9EF1BEFFFBE002C0205"
-            BuildableName = "Schedule.framework"
-            BlueprintName = "Schedule-tvOS"
-            ReferencedContainer = "container:Schedule.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -66,9 +69,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "52D6D9EF1BEFFFBE002C0205"
+            BlueprintIdentifier = "Schedule::Schedule"
             BuildableName = "Schedule.framework"
-            BlueprintName = "Schedule-tvOS"
+            BlueprintName = "Schedule"
             ReferencedContainer = "container:Schedule.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -81,15 +84,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "52D6D9EF1BEFFFBE002C0205"
-            BuildableName = "Schedule.framework"
-            BlueprintName = "Schedule-tvOS"
-            ReferencedContainer = "container:Schedule.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
