--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,10 +1,9 @@
 included:
   - Sources
+  - Tests
 
 disabled_rules:
   - cyclomatic_complexity
   - file_length
   - function_body_length
   - identifier_name
-
-line_length: 200
